--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "TrustKit/fishhook"]
-	path = TrustKit/fishhook
+	path = TrustKit/Dependencies/fishhook
 	url = git@github.com:facebook/fishhook.git
