--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
 language: objective-c
 xcode_project: TrustKit.xcodeproj
 xcode_scheme: TrustKit
+script:
+  - xctool -project TrustKit.xcodeproj -scheme TrustKit build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO test
