--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: objective-c
 env:
   matrix: 
     - TEST_SDK=macosx10.9
-    - TEST_SDK=macosx10.10 
-    - TEST_SDK=iphonesimulator8.1
-    - TEST_SDK=iphonesimulator7.0
+#    - TEST_SDK=macosx10.10 
+#    - TEST_SDK=iphonesimulator8.1
+#    - TEST_SDK=iphonesimulator7.0
 script:
   - xctool -project TrustKit.xcodeproj -scheme TrustKit build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -sdk $TEST_SDK test
