--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ env:
 #    - TEST_SDK=iphonesimulator7.0 BUILD_CONFIG=Debug
     - TEST_SDK=iphonesimulator7.0 BUILD_CONFIG=Release BUILD_DEST="platform=iOS Simulator,name=iPhone 6"
 script:
-  - xctool -project TrustKit.xcodeproj -scheme TrustKit -destination "platform=iOS Simulator,name=iPhone 6" -configuration $BUILD_CONFIG build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -sdk $TEST_SDK test
+  - xcodebuild -project TrustKit.xcodeproj -scheme TrustKit -configuration $BUILD_CONFIG build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -sdk $TEST_SDK test
