--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ env:
 #    - TEST_SDK=iphonesimulator8.1 BUILD_CONFIG=Debug
 #    - TEST_SDK=iphonesimulator8.1 BUILD_CONFIG=Release
 #    - TEST_SDK=iphonesimulator7.0 BUILD_CONFIG=Debug
-    - TEST_SDK=iphonesimulator7.0 BUILD_CONFIG=Release BUILD_DEST="platform=iOS Simulator,name=iPhone 6"
+    - TEST_SDK=iphonesimulator7.0 BUILD_CONFIG=Release
 script:
-  - xcodebuild -project TrustKit.xcodeproj -scheme TrustKit -configuration $BUILD_CONFIG build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -sdk $TEST_SDK test
+  - xctool build test -project TrustKit.xcodeproj -scheme TrustKit -configuration $BUILD_CONFIG ONLY_ACTIVE_ARCH=NO CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -sdk $TEST_SDK
