--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ env:
     - TEST_SDK=macosx10.9
     - TEST_SDK=macosx10.10
     - TEST_SDK=iphonesimulator8.1
-    - TEST_SDK=iphonesimulator7.0
+#    - TEST_SDK=iphonesimulator7.0
 script:
   - xcodebuild build test -project TrustKit.xcodeproj -scheme TrustKit -configuration Release CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -sdk $TEST_SDK
