--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: objective-c
 osx_image: xcode7
 env:
   matrix: 
-    - TEST_SDK=macosx10.11 TEST_SCHEME="TrustKit OS X"
+    - TEST_SDK=macosx10.11 TEST_SCHEME='TrustKit OS X'
     - TEST_SDK=iphonesimulator9.0 TEST_SCHEME="TrustKit"
 script:
   - xcodebuild clean -project TrustKit.xcodeproj -scheme $TEST_SCHEME -configuration Release CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -sdk $TEST_SDK
