--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ env:
   matrix: 
     - TEST_SDK=macosx10.11 TEST_SCHEME="TrustKit OS X"
     - TEST_SDK=iphonesimulator9.0 TEST_SCHEME=TrustKit
+    - TEST_SDK=iphonesimulator9.0 TEST_SCHEME=TrustKit_Static
 script:
   - xcodebuild clean -project TrustKit.xcodeproj -scheme "$TEST_SCHEME" -configuration Release CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -sdk $TEST_SDK
   - xcodebuild build test -project TrustKit.xcodeproj -scheme "$TEST_SCHEME" -configuration Release CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -sdk $TEST_SDK
