--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ env:
     - TEST_SDK=macosx10.11 TEST_SCHEME="TrustKit OS X"
     - TEST_SDK=iphonesimulator9.0 TEST_SCHEME=TrustKit
     - TEST_SDK=iphonesimulator9.0 TEST_SCHEME=TrustKit_Static
+    - TEST_SDK=appletvsimulator9.0 TEST_SCHEME="TrustKit tvOS"
 script:
   - xcodebuild clean -project TrustKit.xcodeproj -scheme "$TEST_SCHEME" -configuration Release CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -sdk $TEST_SDK
   - xcodebuild build test -project TrustKit.xcodeproj -scheme "$TEST_SCHEME" -configuration Release CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -sdk $TEST_SDK
