--- a/circle.yml
+++ b/circle.yml
@@ -3,10 +3,9 @@ machine:
     version: 8.0
 test:
   override:
-    - xcodebuild test
+    - xcodebuild clean test
       CODE_SIGNING_REQUIRED=NO
       CODE_SIGN_IDENTITY=
       -destination 'platform=iOS Simulator,name=iPhone 6,OS=10.0'
       -sdk iphonesimulator
       -scheme "TrustKit"
-      build build-tests run-tests
