--- a/circle.yml
+++ b/circle.yml
@@ -10,13 +10,6 @@ test:
       -destination 'platform=iOS Simulator,name=iPhone 6,OS=10.0'
       -sdk iphonesimulator10.0
       -scheme "TrustKit"
-    # iOS 8 platform with iOS 8 SDK
-    - xcodebuild clean test
-      CODE_SIGNING_REQUIRED=NO
-      CODE_SIGN_IDENTITY=
-      -destination 'platform=iOS Simulator,name=iPhone 4S,OS=8.4'
-      -sdk iphonesimulator8.4
-      -scheme "TrustKit"
     # tvOS 10 platform with tvOS 10 SDK
     - xcodebuild clean test
       CODE_SIGNING_REQUIRED=NO
@@ -30,4 +23,19 @@ test:
       CODE_SIGN_IDENTITY=
       -destination 'platform=OS X'
       -sdk macosx10.12
+      -scheme "TrustKit OS X"
+    # iOS 8 platform with iOS 9 SDK
+     - sudo xcode-select --switch /Applications/Xcode-7.3.1.app
+    - xcodebuild clean test
+      CODE_SIGNING_REQUIRED=NO
+      CODE_SIGN_IDENTITY=
+      -destination 'platform=iOS Simulator,name=iPhone 4S,OS=8.4'
+      -sdk iphonesimulator9.3
+      -scheme "TrustKit"
+      # OS X 10.11 platform with OS X 10.11 SDK
+    - xcodebuild clean test
+      CODE_SIGNING_REQUIRED=NO
+      CODE_SIGN_IDENTITY=
+      -destination 'platform=OS X'
+      -sdk macosx10.11
       -scheme "TrustKit OS X"
