--- a/TrustKitDemo/TrustKitDemoInSwift/Info.plist
+++ b/TrustKitDemo/TrustKitDemoInSwift/Info.plist
@@ -23,7 +23,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
-	<string>Main</string>
+	<string>MainStoryboardForSwift</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
