Move the callback stuff to a separate file and clarify names

--- a/.jazzy.yaml
+++ b/.jazzy.yaml
@@ -25,6 +25,8 @@ custom_categories:
 
   - name: Receiving Validation Notifications
     children:
+    - TSKPinningValidatorCallback
+    - TKSDomainPinningPolicy
     - TSKPinningValidatorResult
     - TSKTrustEvaluationResult
   
