--- a/TrustKitDemo/Podfile
+++ b/TrustKitDemo/Podfile
@@ -1,7 +1,7 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+platform :ios, '9.0'
 
-target 'TrustKitDemo' do
+target 'TrustKitDemo-ObjC' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   # use_frameworks!
 
@@ -11,7 +11,7 @@ target 'TrustKitDemo' do
 end
 
 
-target 'TrustKitDemoInSwift' do
+target 'TrustKitDemo-Swift' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   use_frameworks!
 
