--- a/circle.yml
+++ b/circle.yml
@@ -1,37 +1,26 @@
-machine:
-  xcode:
-    version: 9.2.0
-test:
-  override:
-    # iOS 10.0 platform with iOS 11.2 SDK
-    - xcodebuild clean test
-      CODE_SIGNING_REQUIRED=NO
-      CODE_SIGN_IDENTITY=
-      -destination 'platform=iOS Simulator,name=iPhone 5,OS=10.3.1'
-      -sdk iphonesimulator11.2
-      -scheme "TrustKit"
-      
-    # iOS 11.2 platform with iOS 11.2 SDK
-    - xcodebuild clean test
-      CODE_SIGNING_REQUIRED=NO
-      CODE_SIGN_IDENTITY=
-      -destination 'platform=iOS Simulator,name=iPhone 7,OS=11.2'
-      -sdk iphonesimulator11.2
-      -scheme "TrustKit"
-      
-    # macOS 10.13 platform with macOS 10.13 SDK
-    - xcodebuild clean test
-      CODE_SIGNING_REQUIRED=NO
-      CODE_SIGN_IDENTITY=
-      -destination 'platform=OS X'
-      -sdk macosx10.13
-      -scheme "TrustKit OS X"
+version: 2
+jobs:
+  build-and-test:
+    macos:
+      xcode: "10.1"
+    working_directory: /Users/distiller/project
+    environment:
+      FL_OUTPUT_DIR: output
 
-    # tvOS 11.2 platform with tvOS 11.2 SDK
-    - xcodebuild clean test
-      CODE_SIGNING_REQUIRED=NO
-      CODE_SIGN_IDENTITY=
-      -destination 'platform=tvOS Simulator,name=Apple TV,OS=11.2'
-      -sdk appletvsimulator11.2
-      -scheme "TrustKit tvOS"
-      
+      - run:
+          name: Build and run tests
+          command: fastlane scan
+          environment:
+            SCAN_DEVICE: iPhone 8
+            SCAN_SCHEME: WebTests
+
+      - store_test_results:
+          path: output/scan
+      - store_artifacts:
+          path: output
+
+workflows:
+  version: 2
+  build-and-test:
+    jobs:
+      - build-and-test
