--- a/circle.yml
+++ b/circle.yml
@@ -7,13 +7,13 @@ jobs:
     environment:
       FL_OUTPUT_DIR: output
 
+    steps:
       - run:
           name: Build and run tests
           command: fastlane scan
           environment:
             SCAN_DEVICE: iPhone 8
             SCAN_SCHEME: WebTests
-
       - store_test_results:
           path: output/scan
       - store_artifacts:
